# langchain-rag-pinecone

./: .gitignore  README.md  chat.py  ingest.py  ingestion.py  pyproject.toml
.devcontainer/: devcontainer.json
documents/: finland.txt
